--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <div class="container">
         <div class="row row-content">
-            <div class="colxs-12 col-sm-3 col-sm-push-9">
+            <div class="col-xs-12 col-sm-3 col-sm-push-9">
                 <p style="padding:20px;"></p>
                 <h3 align=center>Our Lipsmacking Culinary Creations</h3>
             </div>
@@ -119,10 +119,10 @@
         </div>
     </div>
 
-    <footer>
+    <footer class="row-footer">
         <div class="container">
-            <div class="row row-footer">
-                <div class="col-xs-6 col-sm-3">
+            <div class="row">
+                <div class="col-xs-5 col-xs-offset-1 col-sm-2 col-sm-offset-1">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="#">Home</a></li>
@@ -134,14 +134,14 @@
                 <div class="col-xs-6 col-sm-5">
                     <h5>Our Address</h5>
                     <address>
-		              121, Clear Water Bay Road<br>
-		              Clear Water Bay, Kowloon<br>
-		              HONG KONG<br>
-		              <i class="fa fa-phone"></i>: +852 1234 5678<br>
-		              <i class="fa fa-fax"></i>: +852 8765 4321<br>
-		              <i class="fa fa-envelope"></i>:
+                        121, Clear Water Bay Road<br>
+                        Clear Water Bay, Kowloon<br>
+                        HONG KONG<br>
+                        <i class="fa fa-phone"></i>: +852 1234 5678<br>
+                        <i class="fa fa-fax"></i>: +852 8765 4321<br>
+                        <i class="fa fa-envelope"></i>:
                         <a href="mailto:confusion@food.net">confusion@food.net</a>
-		           </address>
+                    </address>
                 </div>
                 <div class="col-xs-12 col-sm-4">
                     <div class="nav navbar-nav" style="padding: 40px 10px;">
@@ -160,7 +160,6 @@
             </div>
         </div>
     </footer>
-
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
