--- a/aboutus.html
+++ b/aboutus.html
@@ -33,7 +33,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+                <a class="navbar-brand" href="index.html">Ristorante Con Fusion</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -45,6 +45,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                          role="button" aria-haspopup="true" aria-expanded="false">
+                            <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
                          Menu <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Appetizers</a></li>
@@ -57,7 +58,7 @@
                             <li><a href="#">Weekend Brunch</a></li>
                         </ul>
                     </li>
-                    <li><a href="contactus.html">Contact</a></li>
+                    <li><a href="contactus.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -81,13 +82,13 @@
 
     <div class="container">
         <div class="row">
-            <div>
-                <ol class="breadcrumb">
+            <div class="col-xs-12">
+                <ul class="breadcrumb">
                     <li><a href="index.html">Home</a></li>
                     <li class="active">About us</li>
-                </ol>
+                </ul>
             </div>
-            <div>
+            <div class="col-xs-12">
                <h3>About Us</h3>
                <hr>
             </div>
