--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+                <a class="navbar-brand" href="index.html"><img src="img/logo.png" height=30 width=41></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -60,6 +60,21 @@
                     </li>
                     <li><a href="contactus.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
                 </ul>
+                <form class="navbar-form navbar-right" role="form">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Email" id="email">
+                    </div>
+                    <div class="form-group">
+                        <input type="password" class="form-control" placeholder="Password" id="password">
+                    </div>
+
+                    <div class="checkbox-inline">
+                        <label style="color: white;">
+                            <input type="checkbox"> Remember me
+                        </label>
+                    </div>
+                    <button type="submit" class="btn btn-info">Sign in</button>
+                </form>
             </div>
         </div>
     </nav>
@@ -74,7 +89,12 @@
                     <p style="padding:40px;"></p>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-xs-12 col-sm-4">
+                <div class="col-xs-12 col-sm-2">
+                    <p style="padding:20px;"></p>
+                    <img src="img/logo.png" class="img-responsive">
+                </div>
+                <div class="col-xs-12 col-sm-2">
+                    <a class="btn btn-warning btn-block" href="#reserveForm">Reserve table</a>
                 </div>
             </div>
         </div>
@@ -87,37 +107,126 @@
                 <h3 align=center>Our Lipsmacking Culinary Creations</h3>
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
-                <h2>Uthappizza</h2>
-                <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
-                <p><a  href="#">More &raquo;</a></p>
+                <div class="media">
+                    <div class="media-left media-middle">
+                        <a href="#">
+                            <img class="media-object img-thumbnail"
+                                 src="img/uthappizza.png" alt="Uthappizza">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h2 class="media-heading">Uthappizza  <span class="label label-danger label-xs">Hot</span>
+                        <span class="badge"></span> </h2>
+                        <p>A unique combination of Indian Uthappam (pancake) and
+                            Italian pizza, topped with Cerignola olives, ripe vine
+                            cherry tomatoes, Vidalia onion, Guntur chillies and
+                            Buffalo Paneer.</p>
+                        <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+                    </div>
+                </div>
             </div>
         </div>
 
 
         <div class="row row-content">
-            <div class="col-xs-12 col-sm-3">
+            <div class="col-xs-12 col-sm-3 col-sm-push-9">
                 <p style="padding:20px;"></p>
                 <h3 align=center>This Month's Promotions</h3>
             </div>
-            <div class="col-xs-12 col-sm-9">
+            <div class="col-xs-12 col-sm-9 col-sm-pull-3">
                 <h2>Weekend Grand Buffet</h2>
                 <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
-                <p><a href="#">More &raquo;</a></p>
+                <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
             </div>
         </div>
 
         <div class="row row-content">
-            <div class="col-xs-12 col-sm-3">
+            <div class="col-xs-12 col-sm-3 col-sm-push-9">
                 <p style="padding:20px;"></p>
                 <h3 align=center>Meet our Culinary Specialists</h3>
             </div>
-            <div class="col-xs-12 col-sm-9">
-                <h2>Alberto Somayya</h2>
-                <h4>Executive Chef</h4>
-                <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
-                <p><a href="#">More &raquo;</a></p>
+            <div class="col-xs-12 col-sm-9 col-sm-pull-3">
+                <div class="media">
+                    <div class="media-left media-middle">
+                        <a href="#">
+                            <img class="media-object img-thumbnail"
+                                 src="img/alberto.png" alt="Alberto Somayya">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h2 class="media-heading">Alberto Somayya</h2>
+                        <h4>Executive Chef</h4>
+                        <p>Award winning three-star Michelin chef with wide
+                            International experience having worked closely with
+                            whos-who in the culinary world, he specializes in
+                            creating mouthwatering Indo-Italian fusion experiences.
+                        </p>
+                        <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+                    </div>
+                </div>
             </div>
         </div>
+        <a name="reserveForm"></a>
+        <div class="row row-content">
+            <div class="col-xs-12 col-sm-3">
+                <p style="padding:20px;"></p>
+                <h3 align=center>Reserve a Table</h3>
+            </div>
+            <div class="col-xs-12 col-sm-9">
+                <form class="form-horizontal">
+                    <div class="form-group">
+                        <label for="numberOfGuests1" class="col-sm-2 control-label">Number of Guests</label>
+                        <div class="col-sm-10">
+                            <label class="radio-inline">
+                                <input type="radio" name="numberOfGuests" id="numberOfGuests1" value="option1"> 1
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="numberOfGuests" id="numberOfGuests2" value="option2"> 2
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="numberOfGuests" id="numberOfGuests3" value="option3"> 3
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="numberOfGuests" id="numberOfGuests4" value="option1"> 4
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="numberOfGuests" id="numberOfGuests5" value="option2"> 5
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="numberOfGuests" id="numberOfGuests6" value="option3"> 6
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-group has-feedback">
+                        <label for="inputDate" class="col-sm-2 control-label">Date and Time</label>
+                        <div class="col-sm-3">
+                            <input type="text" class="form-control" placeholder="Date"
+                                   id="inputDate" aria-describedby="inputDateStatus">
+                            <span class="glyphicon glyphicon-calendar form-control-feedback" aria-hidden="true"></span>
+                            <span id="inputDateStatus" class="sr-only">(success)</span>
+                        </div>
+                        <div class="col-sm-3">
+                            <input type="text" class="form-control" placeholder="Time"
+                                   id="inputTime" aria-describedby="inputTimeStatus">
+                            <span class="glyphicon glyphicon-time form-control-feedback" aria-hidden="true"></span>
+                            <span id="inputTimeStatus" class="sr-only">(success)</span>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-10 col-sm-offset-2">
+                            <button type="submit" class="btn btn-primary">Reserve</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="col-sm-9 col-sm-offset-3">
+                <div class="alert alert-warning alert-dismissible" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <strong>Warning:</strong> Please <a href="tel:+85212345678">Call</a> us to reserve for more than six guests.
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <footer class="row-footer">
