--- a/index.html
+++ b/index.html
@@ -129,14 +129,24 @@
 
 
         <div class="row row-content">
-            <div class="col-xs-12 col-sm-3 col-sm-push-9">
+            <div class="col-xs-12 col-sm-3">
                 <p style="padding:20px;"></p>
                 <h3 align=center>This Month's Promotions</h3>
             </div>
-            <div class="col-xs-12 col-sm-9 col-sm-pull-3">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
-                <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+            <div class="col-xs-12 col-sm-9">
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="media-heading">Weekend Grand Buffet <span class="label label-danger">New</span></h2>
+                        <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                        <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+                    </div>
+                    <div class="media-right media-middle">
+                        <a href="#">
+                            <img class="media-object img-thumbnail" src="img/buffet.png"
+                                 alt="Weekend Grand Buffet">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -222,7 +232,7 @@
             <div class="col-sm-9 col-sm-offset-3">
                 <div class="alert alert-warning alert-dismissible" role="alert">
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <strong>Warning:</strong> Please <a href="tel:+85212345678">Call</a> us to reserve for more than six guests.
+                    <strong>Warning:</strong> Please <strong><a href="tel:+85212345678" class="alert-link">Call</a></strong> us to reserve for more than six guests.
                 </div>
             </div>
         </div>
