--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                     <img src="img/logo.png" class="img-responsive">
                 </div>
                 <div class="col-xs-12 col-sm-2">
+                    <p style="padding:40px;"></p>
                     <a class="btn btn-warning btn-block" href="#reserveForm">Reserve table</a>
                 </div>
             </div>
