--- a/mytest.html
+++ b/mytest.html
@@ -24,6 +24,23 @@
     <title>Test</title>
 </head>
 <body>
+    <a class="btn btn-primary" role="button" data-toggle="collapse"
+       href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+        Link with href
+    </a>
+    <button class="btn btn-primary" type="button" data-toggle="collapse"
+            data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+        Button with data-target
+    </button>
+    <div class="collapse in" id="collapseExample">
+        <div class="well">
+            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
+            richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes
+            anderson cred nesciunt sapiente ea proident.
+        </div>
+    </div>
+    <br>
+    <br>
     <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
     <button type="button" class="btn btn-success btn-lg btn-block">Block level button</button>
 
