--- a/index.html
+++ b/index.html
@@ -60,24 +60,48 @@
                     </li>
                     <li><a href="contactus.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
                 </ul>
-                <form class="navbar-form navbar-right" role="form">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Email" id="email">
-                    </div>
-                    <div class="form-group">
-                        <input type="password" class="form-control" placeholder="Password" id="password">
-                    </div>
-
-                    <div class="checkbox-inline">
-                        <label style="color: white;">
-                            <input type="checkbox"> Remember me
-                        </label>
-                    </div>
-                    <button type="submit" class="btn btn-info">Sign in</button>
-                </form>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a data-toggle="modal" data-target="#loginModal">
+                            <span class="glyphicon glyphicon-log-in"></span>
+                            Login
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
+
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Login </h4>
+                </div>
+                <div class="modal-body">
+                    <form class="form-inline" role="form">
+                        <div class="form-group">
+                            <input type="text" class="form-control input-sm" placeholder="Email" id="email">
+                        </div>
+                        <div class="form-group">
+                            <input type="password" class="form-control input-sm" placeholder="Password" id="password">
+                        </div>
+
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox"> Remember me
+                            </label>
+                        </div>
+                        <button type="submit" class="btn btn-info btn-sm">Sign in</button>
+                        <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <header class="jumbotron">
 
         <!-- Main component for a primary marketing message or call to action -->
@@ -95,7 +119,9 @@
                 </div>
                 <div class="col-xs-12 col-sm-2">
                     <p style="padding:40px;"></p>
-                    <a class="btn btn-warning btn-block" href="#reserveForm">Reserve table</a>
+                    <a type="button" class="btn btn-warning btn-block"
+                       data-toggle="tooltip" title="<strong>Or Call us at +852 12345678</strong>"
+                       data-placement="bottom" href="#reserveForm" data-html="true">Reserve table</a>
                 </div>
             </div>
         </div>
@@ -285,6 +311,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
 </body>
 
 </html>
