--- a/index.html
+++ b/index.html
@@ -102,6 +102,76 @@
         </div>
     </div>
 
+    <div id="reserveForm" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Reserve a Table</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                    <div class="col-sm-12">
+                        <form class="form-horizontal">
+                            <div class="form-group">
+                                <label for="numberOfGuests1" class="col-sm-2 control-label">Number of Guests</label>
+                                <div class="col-sm-10">
+                                    <label class="radio-inline">
+                                        <input type="radio" name="numberOfGuests" id="numberOfGuests1" value="option1"> 1
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="numberOfGuests" id="numberOfGuests2" value="option2"> 2
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="numberOfGuests" id="numberOfGuests3" value="option3"> 3
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="numberOfGuests" id="numberOfGuests4" value="option1"> 4
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="numberOfGuests" id="numberOfGuests5" value="option2"> 5
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="numberOfGuests" id="numberOfGuests6" value="option3"> 6
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="form-group has-feedback">
+                                <label for="inputDate" class="col-sm-2 control-label">Date and Time</label>
+                                <div class="col-sm-4">
+                                    <input type="text" class="form-control" placeholder="Date"
+                                           id="inputDate" aria-describedby="inputDateStatus">
+                                    <span class="glyphicon glyphicon-calendar form-control-feedback" aria-hidden="true"></span>
+                                    <span id="inputDateStatus" class="sr-only">(success)</span>
+                                </div>
+                                <div class="col-sm-4">
+                                    <input type="text" class="form-control" placeholder="Time"
+                                           id="inputTime" aria-describedby="inputTimeStatus">
+                                    <span class="glyphicon glyphicon-time form-control-feedback" aria-hidden="true"></span>
+                                    <span id="inputTimeStatus" class="sr-only">(success)</span>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-sm-10 col-sm-offset-2">
+                                    <button type="submit" class="btn btn-primary">Reserve</button>
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="col-sm-12">
+                        <div class="alert alert-warning alert-dismissible" role="alert">
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <strong>Warning:</strong> Please <strong><a href="tel:+85212345678" class="alert-link">Call</a></strong> us to reserve for more than six guests.
+                        </div>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <header class="jumbotron">
 
         <!-- Main component for a primary marketing message or call to action -->
@@ -120,8 +190,8 @@
                 <div class="col-xs-12 col-sm-2">
                     <p style="padding:40px;"></p>
                     <a type="button" class="btn btn-warning btn-block"
-                       data-toggle="tooltip" title="<strong>Or Call us at +852 12345678</strong>"
-                       data-placement="bottom" href="#reserveForm" data-html="true">Reserve table</a>
+                       data-toggle="modal" data-target="#reserveForm" title="Or Call us at +852 12345678"
+                       href="#">Reserve table</a>
                 </div>
             </div>
         </div>
@@ -263,66 +333,6 @@
                         </p>
                         <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
                     </div>
-                </div>
-            </div>
-        </div>
-        <a name="reserveForm"></a>
-        <div class="row row-content">
-            <div class="col-xs-12 col-sm-3">
-                <p style="padding:20px;"></p>
-                <h3 align=center>Reserve a Table</h3>
-            </div>
-            <div class="col-xs-12 col-sm-9">
-                <form class="form-horizontal">
-                    <div class="form-group">
-                        <label for="numberOfGuests1" class="col-sm-2 control-label">Number of Guests</label>
-                        <div class="col-sm-10">
-                            <label class="radio-inline">
-                                <input type="radio" name="numberOfGuests" id="numberOfGuests1" value="option1"> 1
-                            </label>
-                            <label class="radio-inline">
-                                <input type="radio" name="numberOfGuests" id="numberOfGuests2" value="option2"> 2
-                            </label>
-                            <label class="radio-inline">
-                                <input type="radio" name="numberOfGuests" id="numberOfGuests3" value="option3"> 3
-                            </label>
-                            <label class="radio-inline">
-                                <input type="radio" name="numberOfGuests" id="numberOfGuests4" value="option1"> 4
-                            </label>
-                            <label class="radio-inline">
-                                <input type="radio" name="numberOfGuests" id="numberOfGuests5" value="option2"> 5
-                            </label>
-                            <label class="radio-inline">
-                                <input type="radio" name="numberOfGuests" id="numberOfGuests6" value="option3"> 6
-                            </label>
-                        </div>
-                    </div>
-                    <div class="form-group has-feedback">
-                        <label for="inputDate" class="col-sm-2 control-label">Date and Time</label>
-                        <div class="col-sm-3">
-                            <input type="text" class="form-control" placeholder="Date"
-                                   id="inputDate" aria-describedby="inputDateStatus">
-                            <span class="glyphicon glyphicon-calendar form-control-feedback" aria-hidden="true"></span>
-                            <span id="inputDateStatus" class="sr-only">(success)</span>
-                        </div>
-                        <div class="col-sm-3">
-                            <input type="text" class="form-control" placeholder="Time"
-                                   id="inputTime" aria-describedby="inputTimeStatus">
-                            <span class="glyphicon glyphicon-time form-control-feedback" aria-hidden="true"></span>
-                            <span id="inputTimeStatus" class="sr-only">(success)</span>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-sm-10 col-sm-offset-2">
-                            <button type="submit" class="btn btn-primary">Reserve</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <div class="col-sm-9 col-sm-offset-3">
-                <div class="alert alert-warning alert-dismissible" role="alert">
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <strong>Warning:</strong> Please <strong><a href="tel:+85212345678" class="alert-link">Call</a></strong> us to reserve for more than six guests.
                 </div>
             </div>
         </div>
