--- a/index.html
+++ b/index.html
@@ -137,6 +137,19 @@
                                     </label>
                                 </div>
                             </div>
+                            <div class="form-group">
+                                <label for="nonSmoking" class="col-sm-2 control-label">Section</label>
+                                <div class="col-sm-10">
+                                    <div class="btn-group" data-toggle="buttons">
+                                        <label class="btn btn-success active">
+                                            <input type="radio" name="section" id="nonSmoking" autocomplete="off" checked> Non-Smoking
+                                        </label>
+                                        <label class="btn btn-danger">
+                                            <input type="radio" name="section" id="smoking" autocomplete="off"> Smoking
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="form-group has-feedback">
                                 <label for="inputDate" class="col-sm-2 control-label">Date and Time</label>
                                 <div class="col-sm-4">
